# pace-2025

./: CMakeLists.txt  README.md
include/: Makros.h
include/combinatorics/: CombinatoricUtils.h
include/combinatorics/sequences/: IntegerSequenceCreator.h
include/combinatorics/sequences/rmq/: RMQDynamicSqrtTree.h  RMQStaticFCB.h
include/datastructures/: Heap.h  RandomSelectionSet.h
include/graphs/: GraphInducer.h  GraphReader.h  GraphUtils.h
include/graphs/VertexCover/: VCUtils.h
include/graphs/VertexCover/approximation/NuMVC/: numvc.h
include/graphs/components/: ConnectedComponents.h
include/graphs/generators/: GraphGenerator.h
include/utils/: RandomNumberGenerators.h  StandardUtils.h  Stopwatch.h
src/CONTESTS/PACE25/: DSReducer.cpp  DSReducer.h  DSSE.cpp  DSSE.h  DominatingSetSolver.cpp  DominatingSetSolver.h  GraphRemapper.cpp  GraphRemapper.h  HittingSetLS.cpp  HittingSetLS.h  Pace25Utils.cpp  Pace25Utils.h  pace25ds_exact_main.cpp  pace25ds_heuristic_main.cpp  pace25hs_exact_main.cpp  pace25hs_heuristic_main.cpp  solveCPSAT.py
src/combinatorics/: CombinatoricUtils.cpp
src/combinatorics/sequences/: IntegerSequenceCreator.cpp
src/datastructures/: FAU.cpp  RandomSelectionSet.cpp
src/graphs/: GraphInducer.cpp  GraphReader.cpp  GraphUtils.cpp
src/graphs/VertexCover/: VCUtils.cpp
src/graphs/components/: ConnctedComponents.cpp
src/graphs/generators/: GraphGenerator.cpp
src/utils/: RandomNumberGenerators.cpp  StandardUtils.cpp  Stopwatch.cpp
